
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;
struct sk_buff {int* data; int len; } ;
struct l3_process {int debug; int st; } ;


 int ERR_IE_COMPREHENSION ;
 int ERR_IE_LENGTH ;
 int ERR_IE_SEQUENCE ;
 int ERR_IE_UNRECOGNIZED ;
 int L3_DEB_CHECK ;
 int* comp_required ;
 int getmax_ie_len (int) ;
 int ie_in_set (struct l3_process*,int,int*) ;
 int l3_debug (int ,char*,...) ;

__attribute__((used)) static int
check_infoelements(struct l3_process *pc, struct sk_buff *skb, int *checklist)
{
 int *cl = checklist;
 u_char mt;
 u_char *p, ie;
 int l, newpos, oldpos;
 int err_seq = 0, err_len = 0, err_compr = 0, err_ureg = 0;
 u_char codeset = 0;
 u_char old_codeset = 0;
 u_char codelock = 1;

 p = skb->data;

 p++;
 l = (*p++) & 0xf;
 p += l;
 mt = *p++;
 oldpos = 0;
 while ((p - skb->data) < skb->len) {
  if ((*p & 0xf0) == 0x90) {
   old_codeset = codeset;
   codeset = *p & 7;
   if (*p & 0x08)
    codelock = 0;
   else
    codelock = 1;
   if (pc->debug & L3_DEB_CHECK)
    l3_debug(pc->st, "check IE shift%scodeset %d->%d",
     codelock ? " locking ": " ", old_codeset, codeset);
   p++;
   continue;
  }
  if (!codeset) {
   if ((newpos = ie_in_set(pc, *p, cl))) {
    if (newpos > 0) {
     if (newpos < oldpos)
      err_seq++;
     else
      oldpos = newpos;
    }
   } else {
    if (ie_in_set(pc, *p, comp_required))
     err_compr++;
    else
     err_ureg++;
   }
  }
  ie = *p++;
  if (ie & 0x80) {
   l = 1;
  } else {
   l = *p++;
   p += l;
   l += 2;
  }
  if (!codeset && (l > getmax_ie_len(ie)))
   err_len++;
  if (!codelock) {
   if (pc->debug & L3_DEB_CHECK)
    l3_debug(pc->st, "check IE shift back codeset %d->%d",
     codeset, old_codeset);
   codeset = old_codeset;
   codelock = 1;
  }
 }
 if (err_compr | err_ureg | err_len | err_seq) {
  if (pc->debug & L3_DEB_CHECK)
   l3_debug(pc->st, "check IE MT(%x) %d/%d/%d/%d",
    mt, err_compr, err_ureg, err_len, err_seq);
  if (err_compr)
   return(ERR_IE_COMPREHENSION);
  if (err_ureg)
   return(ERR_IE_UNRECOGNIZED);
  if (err_len)
   return(ERR_IE_LENGTH);
  if (err_seq)
   return(ERR_IE_SEQUENCE);
 }
 return(0);
}
